--- a/css/styles.css
+++ b/css/styles.css
@@ -50,6 +50,19 @@ h3 {
     padding-bottom: 120px;
 }
 
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip: rect(0 0 0 0);
+    clip-path: inset(50%);
+    overflow: hidden;
+}
+
 /* #endregion Common*/
 
 /* #region header */
@@ -139,12 +152,12 @@ h3 {
     background: #2E2F42;
     text-align: center;
     color: #FFFFFF;
+    padding-top: 188px;
+    padding-bottom: 188px;
 }
 
 
 .hero-container {
-    padding-top: 188px;
-    padding-bottom: 188px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -152,7 +165,8 @@ h3 {
 }
 
 .hero-title {
-    width: 524px;
+    max-width: 496px;
+    /*width: 524px;*/
     font-size: 56px;
     font-weight: 700;
     line-height: 1.07;
@@ -168,8 +182,10 @@ h3 {
     letter-spacing: 0.04em;
     cursor: pointer;
     border-radius: 4px;
-    width: 169px;
+    border: none;
+    /* width: 169px;*/
     height: 56px;
+    min-width: 169px;
     box-shadow: 0px 4px 4px 0px #00000026;
 }
 
@@ -184,10 +200,6 @@ h3 {
 
 .features {}
 
-.features-title {
-    display: none;
-}
-
 .features-list {
     display: flex;
     gap: 24px;
@@ -198,6 +210,7 @@ h3 {
 }
 
 .features-subtitle {
+    margin-bottom: 8px;
     font-size: 20px;
     font-weight: 500;
     line-height: 1.2;
@@ -236,11 +249,15 @@ h3 {
 
 .team-item {
     background: #FFFFFF;
+    border-radius: 0px 0px 4px 4px;
+}
+
+.team-card {
+    padding: 32px 0;
+    gap: 8px;
 }
 
 .team-subtitle {
-    margin-top: 32px;
-    margin-bottom: 8px;
     font-size: 20px;
     font-weight: 500;
     line-height: 1.2;
@@ -249,7 +266,6 @@ h3 {
 }
 
 .team-text {
-    margin-bottom: 32px;
     color: #434455;
     font-size: 16px;
     line-height: 1.5;
@@ -264,6 +280,7 @@ h3 {
 .portfolio {}
 
 .portfolio-title {
+    margin-bottom: 72px;
     font-size: 36px;
     font-weight: 700;
     line-height: 1.11;
@@ -274,7 +291,6 @@ h3 {
 }
 
 .portfolio-list {
-    margin-top: 72px;
     display: flex;
     flex-wrap: wrap;
     gap: 24px;
@@ -307,6 +323,7 @@ h3 {
 /* #region footer */
 
 .footer {
+    padding: 100px 0;
     background: #2E2F42;
 }
 
@@ -314,6 +331,7 @@ h3 {
     display: inline-block;
     align-items: center;
     padding: 24px 0;
+    margin-bottom: 16px;
 }
 
 .footer-logo .logo-part {
