--- a/css/styles.css
+++ b/css/styles.css
@@ -166,7 +166,6 @@ h3 {
 
 .hero-title {
     max-width: 496px;
-    /*width: 524px;*/
     font-size: 56px;
     font-weight: 700;
     line-height: 1.07;
@@ -183,7 +182,6 @@ h3 {
     cursor: pointer;
     border-radius: 4px;
     border: none;
-    /* width: 169px;*/
     height: 56px;
     min-width: 169px;
     box-shadow: 0px 4px 4px 0px #00000026;
@@ -293,15 +291,19 @@ h3 {
 .portfolio-list {
     display: flex;
     flex-wrap: wrap;
-    gap: 24px;
+    gap: 48px 24px;
 }
 
-.portfolio-item {
-    border-bottom: 1px solid #e7e9fc;
+.portfolio-item {}
+
+.portfolio-card {
+    padding: 32px 16px;
+    border: 1px solid #e7e9fc;
+    border-top: none;
 }
 
 .portfolio-subtitle {
-    margin-top: 32px;
+    margin-bottom: 8px;
     font-size: 20px;
     font-weight: 500;
     line-height: 1.2;
@@ -310,8 +312,6 @@ h3 {
 }
 
 .portfolio-text {
-    margin-top: 8px;
-    margin-bottom: 32px;
     color: #434455;
     font-size: 16px;
     line-height: 1.5;
